change name and location

--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
    <section id="media"></section>
    <div class="wrap">
       <div class="title">
-         <h1>Asep</h1>
+         <h1>Van Truc</h1>
          <h2>&</h2>
-         <h1>Indah</h1>
+         <h1>Thao Nguyen</h1>
          <h3>Are getting married</h3>
          <p>
-            on <span class="date">16 July 2023</span></29>, At <span class="place">Cariu</span> Bogor Regency
+            on <span class="date">05 Jan 2025</span></29>, At <span class="place">Trong Phat</span> Palace
          </p>
       </div>
    </div>
