Change location maps

--- a/index.html
+++ b/index.html
@@ -42,12 +42,8 @@
    <div id="time"></div>
    <p class="dance-med"></p>
    <div class="actions">
-      <a href="https://goo.gl/maps/8ExzkP8SSYuD27bc8" target="_blank">
+      <a href="https://maps.app.goo.gl/gECBR2ocJTRus7j89" target="_blank">
          <div class="venue">SEE THE LOCATION</div>
-      </a>
-      <a href="https://raw.githubusercontent.com/asepscareer/wedding-invitation/main/invitation/invitation-card.jpeg"
-      download="invitation-card.jpeg">
-         <div class="venue">DOWNLOAD INVITATION CARD</div>
       </a>
    </div>
    <p class="footer">
@@ -57,8 +53,7 @@
    <div class="music">
       <audio src="./assets/mp3/song.mp3" id="my_audio" loop="loop"></audio>
    </div>
-   <p class="happiness">Join us in our happiness!<br><a href="https://wa.me/+6285794058528" target="_blank"
-         class="whatsapp"><i class="fa fa-whatsapp"></i></a></p>
+   <p class="happiness">Join us in our happiness!<br></p>
    <!-- partial -->
    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
    <script src='https://cdn.jsdelivr.net/gh/timoschaefer/jQuery-Sakura/jquery-sakura.min.js'></script>
