--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <span></span>
    </p>
    <div class="music">
-      <audio src="./assets/mp3/song.mp3" id="my_audio" loop="loop"></audio>
+      <audio src="./assets/mp3/song.mp3" id="my_audio" loop="loop" autoplay controls></audio>
    </div>
    <p class="happiness">Join us in our happiness!<br></p>
    <!-- partial -->
