--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
    <link rel="shortcut icon" href="favicon.png" type="image/png">
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-   <meta name="description"
-      content="Asep Indah - Wedding Invitation">
-   <meta name="author" content="Asep Saputra">
+   <meta name="description" content="Asep Indah - Wedding Invitation">
+   <meta name="author" content="Van Truc">
    <meta name="email" content="aseps.career@gmail.com">
-   <meta name="copyright" content="Asep Saputra 2023" />
+   <meta name="copyright" content="Van Truc 2025" />
    <meta property="og:type" content="website" />
    <meta property="og:title" content="Wedding Invitation | 16th Jul | Cariu, Bogor" />
    <meta property="og:description" content="Asep Indah - Wedding Invitation" />
-   <meta property="og:image" content="https://raw.githubusercontent.com/asepscareer/wedding-invitation/main/invitation/invitation-card.jpeg" />
+   <meta property="og:image"
+      content="https://raw.githubusercontent.com/asepscareer/wedding-invitation/main/invitation/invitation-card.jpeg" />
 
    <title>Wedding Invitation</title>
 
@@ -25,8 +25,10 @@
 
 <body>
    <div class="sakura-falling"></div>
-   <img src="https://raw.githubusercontent.com/asepscareer/wedding-invitation/main/assets/img/right.png" alt="image-top-right" class="top-right-decoration">
-   <img src="https://raw.githubusercontent.com/asepscareer/wedding-invitation/main/assets/img/left.png" alt="image-top-left" class="top-left-decoration">
+   <img src="https://raw.githubusercontent.com/asepscareer/wedding-invitation/main/assets/img/right.png"
+      alt="image-top-right" class="top-right-decoration">
+   <img src="https://raw.githubusercontent.com/asepscareer/wedding-invitation/main/assets/img/left.png"
+      alt="image-top-left" class="top-left-decoration">
    <section id="media"></section>
    <div class="wrap">
       <div class="title">
@@ -51,18 +53,11 @@
       <span></span>
    </p>
    <div class="music">
-      <audio src="./assets/mp3/song.mp3" id="my_audio" loop="loop" autoplay muted></audio>
-      <script>
-         window.addEventListener('load', () => {
-            const audio = document.getElementById("my_audio");
-            audio.muted = false;  // Unmute after load
-            audio.play().catch(error => {
-               console.log("Autoplay was prevented. Audio controls are visible to allow manual play.");
-            });
-         });
-      </script>
+      <audio src="./assets/mp3/song.mp3" id="my_audio" loop="loop"></audio>
    </div>
    <p class="happiness">Join us in our happiness!<br></p>
+   <p class="note">[ Just tap on the screen to enjoy the music! ]<br></p>
+
    <!-- partial -->
    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
    <script src='https://cdn.jsdelivr.net/gh/timoschaefer/jQuery-Sakura/jquery-sakura.min.js'></script>
