--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
    <link rel="shortcut icon" href="favicon.png" type="image/png">
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-   <meta name="description" content="Asep Indah - Wedding Invitation">
+   <meta name="description" content="Truc Nguyen - Wedding Invitation">
    <meta name="author" content="Van Truc">
    <meta name="email" content="aseps.career@gmail.com">
    <meta name="copyright" content="Van Truc 2025" />
    <meta property="og:type" content="website" />
-   <meta property="og:title" content="Wedding Invitation | 16th Jul | Cariu, Bogor" />
-   <meta property="og:description" content="Asep Indah - Wedding Invitation" />
+   <meta property="og:title" content="Wedding Invitation | 5th Jul | An Nhon, Binh Dinh" />
+   <meta property="og:description" content="Truc <3 Nguyen - Wedding Invitation" />
    <meta property="og:image"
       content="https://raw.githubusercontent.com/asepscareer/wedding-invitation/main/invitation/invitation-card.jpeg" />
 
