--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
    <meta name="description" content="Truc Nguyen - Wedding Invitation">
    <meta name="author" content="Van Truc">
-   <meta name="email" content="aseps.career@gmail.com">
+   <meta name="email" content="trucnv99@gmail.com">
    <meta name="copyright" content="Van Truc 2025" />
    <meta property="og:type" content="website" />
    <meta property="og:title" content="Wedding Invitation | 5th Jul | An Nhon, Binh Dinh" />
