--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-   <link rel="shortcut icon" href="favicon.png" type="image/png">
+   <link rel="shortcut icon" href="https://raw.githubusercontent.com/trucvip123/wedding-invitation/refs/heads/main/favicon.png" type="image/png">
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
    <meta name="description" content="Truc & Nguyen - Wedding Invitation">
